numbem andaló add

--- a/cardápio.html
+++ b/cardápio.html
@@ -41,10 +41,10 @@
                     <li>
                         <li><a onclick="abrirFecharMenuCel()"  onmouseenter="abrirMenu()"  id="reservas" class="menu">Reservas</a></li></li>
                         <div  onmouseleave="fecharMenu()" id="div-abertura" class="div-abertura">  
-                        <li><a class="menu-abertura responsivo-pc" href="https://www.google.com">Oficial JK</a></li>
-                        <li><a class="menu-abertura responsivo-pc" href="https://www.google.com">Oficial Andaló</a></li>
-                        <li><a class="menu-abertura responsivo-celular" href="https://www.youtube.com/watch?v=bHRXRYTppHM">Oficial JK</a></li>
-                        <li><a class="menu-abertura responsivo-celular" href="https://www.youtube.com/watch?v=bHRXRYTppHM">Oficial Andaló</a></li>
+                        <li><a class="menu-abertura responsivo-pc" href="https://web.whatsapp.com/send?phone=55173364-9891" target="_blank">Oficial JK</a></li>
+                        <li><a class="menu-abertura responsivo-pc" href="https://web.whatsapp.com/send?phone=551733639899" target="_blank">Oficial Andaló</a></li>
+                        <li><a class="menu-abertura responsivo-celular" href="https://api.whatsapp.com/send?phone=55173364-9891" target="_blank">Oficial JK</a></li>
+                        <li><a class="menu-abertura responsivo-celular" href="https://api.whatsapp.com/send?phone=55173363-9899" target="_blank">Oficial Andaló</a></li>
                         </div> 
             </ul>
             </ul>
@@ -176,9 +176,8 @@
             <img class="logo-footer" src="assets/logo2.png" alt="logo">
             <div>
                 <a href="https://www.instagram.com/jkoficialchoppespeto/" target="_blank"><img class="img-svg" src="assets/insta126.png" alt="instagram"></a>
-            <a href="https://web.whatsapp.com/send?phone=55173364-9891" target="_blank"><img class="img-svg logo-whats pc" src="assets/whats25.png" alt="whatsapp"></a>
-            <a href="https://api.whatsapp.com/send?phone=55173364-9891" target="_blank"><img class="img-svg logo-whats celular" src="assets/whats25.png" alt="whatsapp"></a>
-            <a href="mailto:contato@oficialchoppespeto.com.br" target="_blank"><img class="img-svg" src="assets/email126.png" alt="E-mail"></a>
+                <a href="https://www.facebook.com/oficialchoppeespetoandalo" target="_blank"><img class="img-svg logo-whats" src="assets/o-facebook.png" alt="Facebook"></a>
+                <a href="mailto:contato@oficialchoppespeto.com.br" target="_blank"><img class="img-svg" src="assets/email126.png" alt="E-mail"></a>
             
                         
             </div>
