--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><a class="menu button-ifood" href="https://www.ifood.com.br/delivery/sao-jose-do-rio-preto-sp/oficial-chopp--espeto-jk-jardim-panorama/0b49c1ef-5b64-4154-86ba-20d2053a1e8a" target="_blank">Ifood</a></li>
                 <ul id="list-reservas" class="list-reservas">
                     <li>
-                        <li><a onclick="abrirFecharMenuCel()"  id="reservas" class="menu">Reservas</a></li></li>
+                        <li><a   id="reservas" class="menu">Reservas</a></li></li>
                         <div  onmouseleave="fecharMenu()" id="div-abertura" class="div-abertura">  
                             <li><a class="menu-abertura responsivo-pc" href="https://web.whatsapp.com/send?phone=55173364-9891" target="_blank">Oficial JK</a></li>
                             <li><a class="menu-abertura responsivo-pc" href="https://web.whatsapp.com/send?phone=551733639899" target="_blank">Oficial Andaló</a></li>
@@ -160,7 +160,7 @@
             <div>
             <a href="https://www.instagram.com/jkoficialchoppespeto/" target="_blank"><img class="img-svg" src="assets/insta126.png" alt="instagram"></a>
             <a href="https://www.facebook.com/oficialchoppeespetoandalo" target="_blank"><img class="img-svg logo-whats" src="assets/o-facebook.png" alt="Facebook"></a>
-            <a href="mailto:contato@oficialchoppespeto.com.br" target="_blank"><img class="img-svg" src="assets/email126.png" alt="E-mail"></a>
+            <a href="mailto:contato@oficialchoppespeto.com.br" target="_blank"><img class="img-svg" src="assets/e-mail.png" alt="E-mail"></a>
             
             </div>
           
