--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     
 
 
-<div id="popup" class="popup">
+<!-- <div id="popup" class="popup">
         <img class="imagem-propaganda" src="assets/foto-propaganda2.webp" alt="popup">
           <button id="close">Sair</button>
-        </div>
+        </div> -->
 
       
 
